prevent images in Word from being taller than the page and appearing stretched

--- a/designs/word/classic/assets/style.css
+++ b/designs/word/classic/assets/style.css
@@ -24,6 +24,3 @@ h4{
 h5{
     font-size:1.2em;
 }
-figure {
-    max-height: 100vh;
-}
